# Inventory-management

./: .env.example  .gitignore  README.md  kirana_demand_forecasting_project.md  pos_integration.md  pyproject.toml  requirements.txt  shop.db  shop.db-shm  shop.db-wal
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml
app/: checkout_app.py  main.py  theme.py
config/: data_contract.yaml  data_sources.yaml  features.yaml  metrics.yaml  model.yaml  policy.yaml
deploy/: Dockerfile  docker-compose.yml
docs/: DATA_DICTIONARY.md  FAVORITA_exercise.md  PHASE0_foundations.md  PHASE2_eda_findings.md  PHASE5_findings.md  PHASE5_metrics.md  PHASE6_hybrid.md  PHASE7_findings.md  PHASE7_inventory_sim.md  PHASE8_acceptance.md  PHASE8_operating_policy.md  PHASE9_groundwork.md  PILOT_RUNBOOK.md  PILOT_online_retail.md  PROJECT_REPORT.md
notebooks/: 02_eda.ipynb
src/: config.py
src/continuous/: coverage_monitor.py  drift.py  registry.py  retrain.py  validate_hybrid.py
src/evaluate/: acceptance.py  backtest.py  favorita_exercise.py  forecast_metrics.py  frontier_gate.py  (+4 more)
tests/: test_config.py  test_continuous.py  test_features.py  test_frontier_gate.py  test_guard.py  test_metrics.py  test_newsvendor.py  test_operating_policy.py  test_panel_splits.py  test_pos_bridge.py  test_pos_checkout.py  test_pos_copilot.py  test_pos_dashboard.py  test_pos_engine.py  test_pos_manage.py  test_pos_nightly.py  test_pos_procurement.py  test_pos_sales.py  test_promo.py  test_reorder.py  test_segmentation.py  test_shadow.py  test_staged_data.py  test_validation.py
(+37 files in other folders)
